--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "react-audio-player": "^0.17.0",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.2",
+    "react-native": "^0.64.2",
+    "react-overlay-component": "^1.0.2",
+    "react-screen-orientation": "0.0.4",
     "react-scripts": "4.0.3",
     "react-typing-animation": "^1.6.2",
     "react-typist": "^2.0.5",
+    "use-window-orientation": "^1.0.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
